[gd_scene load_steps=2 format=3 uid="uid://b2u1rj0oiwpya"]

[ext_resource type="Script" path="res://Script/enemy/mob_spawner.gd" id="1_c1d0u"]

[node name="MobSpawner" type="Node2D"]
script = ExtResource("1_c1d0u")

[node name="WaveTimer" type="Timer" parent="."]

[node name="SpwanTimer" type="Timer" parent="."]

[node name="TermTimer" type="Timer" parent="."]

[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
[connection signal="timeout" from="SpwanTimer" to="." method="_on_spwan_timer_timeout"]
[connection signal="timeout" from="TermTimer" to="." method="_on_term_timer_timeout"]
